# scoutapp_program_builder

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  prompt.txt  pyproject.toml  railway.json  requirements.txt
cache/: chunks.pkl
context/: context_index.json  processed_context.txt
src/: deepseek_chat.py  main.py
src/AI stuff/: create_index.py  deepseek_chat.py  preprocess_files.py
src/components/: app_bar.py  message_component.py
src/controllers/: chat_controller.py
src/models/: chat_model.py
src/views/: chat_view.py  home_view.py
