[project]
name = "scoutapp_program_builder"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "flet==0.28.3", "openai>=1.0", "python-dotenv>=1.0" ]


[[project.authors]]
name = "Joaquín Eduardo Ramos Farfán"
email = "contacto@joaquinramos.dev"


[tool.flet]
org = "com.joaquinramos"
product = "scoutapp-program-builder"
company = "joaquin Ramos Developer"
copyright = "Copyright (C) 2025 by Joaquín Eduardo Ramos Farfán"


[tool.flet.app]
path = "src"


[tool.uv]
dev-dependencies = [ "flet[all]==0.28.3" ]


[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies.flet]
extras = [ "all" ]
version = "0.28.3"
